--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=config-service
+server.port=8888
+spring.cloud.config.server.git.uri=file:///C:/Users/HP/Desktop/BankatiProject/bankati/bankati-app/config-repo
